Fixed register and login page overflow with small screen

--- a/scottysnacc/static/base.css
+++ b/scottysnacc/static/base.css
@@ -61,9 +61,28 @@ h2 {
     border-color:#E2DFEC;
     border-width: 0.03rem;
     border-radius: 0.75rem;
-    filter: drop-shadow(2px 2px 2px #7f7e7e);
-      
-  }
+    filter: drop-shadow(2px 2px 2px #7f7e7e); 
+}
+.btn-google {
+    margin-top: 3rem;
+    background-color:#5076ce;
+    border-radius: 0.75rem;
+    color:#E2DFEC;
+    width:14rem;
+    height:2.2rem;
+    border: none;
+    filter: drop-shadow(2px 1px 1px #9d9d9d);
+}
+.btn-google:hover {
+    background-color: #2c5ccd;
+    color:#E2DFEC;
+    transition: 0.2s;
+    border-style: solid;
+    border-color:#E2DFEC;
+    border-width: 0.03rem;
+    border-radius: 0.75rem;
+    filter: drop-shadow(2px 2px 2px #7f7e7e); 
+}
 .btn-default{
     height:1.65rem;
     margin-top: 1rem;
@@ -72,8 +91,9 @@ h2 {
 }
 #login_maindiv, #register_maindiv {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 20px;
+    grid-template-columns: 55% 40%;
+    grid-gap: 5%;
+    height: 100%;
 }
 .btn-circle {
     position:absolute;
@@ -179,8 +199,8 @@ h2 {
 }
 .loginimg_div {
     width:100%;
-    height:100vh;
-    background-color: #D9D9D9;
+    height: calc(100vh - 66px);
+    background-color: #e6e6e6;
 }
 #scotty_logo, #scotty_text {
     padding-left: 0.75rem;
